Update functions.php path in composer.json

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
       "Core\\": "Core/"
     },
     "files": [
-      "App/Helper/functions.php"
+      "Framework/Helper/functions.php"
     ]
   },
   "require": {
